@@ -1,3 +1,7 @@
+2005-11-14  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c: added tests for constants
+
 2005-04-05  Brian Gough  <bjg@network-theory.co.uk>
 
 	* infnan.c: added #include ieeefp.h for Solaris
